# elowen-notes

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish-image.yml
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  normalize.rs  routes.rs  service.rs  state.rs  tracing.rs
src/arangodb/: bootstrap.rs  client.rs  mod.rs
src/service/: mod.rs  promotion.rs
